# library-management

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint  pyproject.toml
library_management/library_management/: settings.py  urls.py
