[tool.poetry]
name = "library-management"
version = "0.1.0"
description = ""
authors = ["Radonja Đorđević <radonja.dordevic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
